--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <script>
             function changetext(){
                 var heading = document.getElementById('heading1');
-                heading.innerHTML="92-3151437387";
+                heading.innerHTML="92-3151437387;
             }
         </script>
         </div>
